zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__granted_permission_request_result.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 5307
expression: "format!(\"{:#?}\", permissions)"
---
Some(
    [
        ReadApplicationState,
        ChangeApplicationState,
        OpenFiles,
        RunCommands,
        OpenTerminalsOrPlugins,
        WriteToStdin,
        WebAccess,
        ReadCliMessages,
        MessageAndLaunchOtherPlugins,
    ],
)
