zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__hide_pane_with_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 6727
expression: "format!(\"{:#?}\", suppress_pane_event)"
---
Some(
    SuppressPane(
        Terminal(
            1,
        ),
        1,
    ),
)
