zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__hide_self_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 3306
expression: "format!(\"{:#?}\", new_tab_event)"
---
Some(
    SuppressPane(
        Plugin(
            0,
        ),
        1,
    ),
)
