zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__list_clients_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 8623
expression: "format!(\"{:#?}\", list_clients_instruction)"
---
ListClientsToPlugin(
    0,
    1,
)
