zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__load_new_plugin_from_hd.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 744
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    (
        0,
        1,
        "Rows: 20, Cols: 121, Received events: [InputReceived]\n\r",
    ),
)
